# vicon2gt

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml
config/: exp_eth.yaml  go1.yaml  params.yaml
launch/: estimate_vicon2gt.launch.py  exp_eth.launch.py  go1_estimate.launch.py
scripts/: bag_pose_extractor.py  trajectory_comparison.py  trajectory_visualizer.py
src/: estimate_vicon2gt.cpp  run_simulation.cpp
src/meas/: Interpolator.h  Propagator.h
src/solver/: ViconGraphSolver.cpp  ViconGraphSolver.h
