<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>vicon2gt</name>
  <version>2.0.0</version>
  <description>
    Transforms groundtruth Vicon poses along with IMU measurements into a groundtruth trajectory.
    All spatial-temporal parameters are estimated between the Vicon and IMU sensor.
    ROS2 port of the original vicon2gt package.
  </description>

  <maintainer email="pgeneva@udel.edu">Patrick Geneva</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>Boost</depend>
  <depend>Eigen3</depend>
  <depend>GTSAM</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>